github url update

--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
             <a href="https://handnew04.github.io/index.xml" type="application/rss+xml" target="_blank"><i class="fa fa-rss"></i> RSS feed</a>
           </li>
           <li>
-            <a href="https://github.com/mobybit/hugo-natrium-theme"><i class="fa fa-github"></i> Code</a>
+            <a href="https://github.com/handnew04"><i class="fa fa-github"></i> Code</a>
           </li>
-          <li>
-            <a href="https://handnew04.github.io/site-notice">Site notice</a>
-          </li>
+          
         </ul>
       </footer>
 
