--- a/test1/index.html
+++ b/test1/index.html
@@ -75,6 +75,14 @@
 
 </main>
 
+<script src="https://utteranc.es/client.js"
+        repo="handnew04/blog-comments"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
+
       <footer class="footer">
         <ul class="footer-links">
           <li>
