--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="https://handnew04.github.io/css/main.css" media="all">
 <link rel="stylesheet" href="https://handnew04.github.io/css/fonts.css">
 
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/github.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/darkula.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
