하이라이트 업데이트

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <link rel="stylesheet" href="https://handnew04.github.io/css/main.css" media="all">
 <link rel="stylesheet" href="https://handnew04.github.io/css/fonts.css">
-
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/darkula.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/darkula.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
   </head>
