favicon path update

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
 <link rel="stylesheet" href="https://handnew04.github.io/css/main.css" media="all">
 <link rel="stylesheet" href="https://handnew04.github.io/css/fonts.css">
+<link rel="icon" type="image/png" sizes="32x32" href="https://handnew04.github.io/images/favicon-32x32.png">
 <link rel="stylesheet" href="https://handnew04.github.io/css/rainbow.css">
 <script src="https://handnew04.github.io/css/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+
+
   </head>
   <body>
     <div class="wrapper">
