--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <title>404 Page not found - Handnew&#39;s blog</title>
 <meta property="og:title" content="404 Page not found - Handnew&#39;s blog">
 <meta property="og:type" content="article">
-<meta property="description" content="404 Page not found">
+<meta property="description" content="">
 <meta property="og:url" content="" >
 
 
