--- a/search.html
+++ b/search.html
@@ -18,7 +18,8 @@
 
 	<body>
     <nav class="main-nav">
-	<a href='https://github.com/handnew04'>About</a>
+  <a href="https://handnew04.github.io/"> <span class="arrow">←</span>Home</a>
+	<a href='https://github.com/handnew04' target="_blank">About</a>
 	<a href='https://handnew04.github.io/posts'>Archive</a>
 	<a href='https://handnew04.github.io/tags'>Tags</a>
 	<a href='https://handnew04.github.io/search'>Search</a>
