--- a/404.html
+++ b/404.html
@@ -25,6 +25,7 @@
 		<link rel="stylesheet" href="https://handnew04.github.io/css/rainbow.css">
 		<script src="https://handnew04.github.io/css/highlight.pack.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
+		<script data-ad-client="ca-pub-2907304965705395" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 
 	<body>
